samples/_failures_safe/1761609920_5e5c69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e7fada2.c: In function ‘main’:
./samples/SAFE/__tmp_9e7fada2.c:154:15: error: missing terminating " character
  154 |     if (scanf("%zu
      |               ^~~~
./samples/SAFE/__tmp_9e7fada2.c:154:5: error: expected expression at end of input
  154 |     if (scanf("%zu
      |     ^~
./samples/SAFE/__tmp_9e7fada2.c:154:5: error: expected declaration or statement at end of input
